# Shinobi

./: .pre-commit-config.yaml  README.md  features.md  pyproject.toml
.cursor/rules/: shinobi-project.mdc  use-uv-always.mdc
.github/workflows/: auto-tag.yml  check-version-bump.yml  lint.yml  test.yml
shinobi/: __init__.py  cli.py
shinobi/commands/: init.py
shinobi/config/: project_config.py
shinobi/templates/: AGENTS.md
shinobi/templates/ci/github_workflows/: lint.yml  test.yml
shinobi/templates/docs/: README.md.template
shinobi/validation/: validators.py
test/: README.md  pyproject.toml
test-project/: README.md  pyproject.toml
test-project/.github/workflows/: test.yml
test/tests/: test_main.py
tests/: __init__.py  test_cli.py  test_commands.py  test_config.py  test_file_generation.py  test_integration.py  test_validation.py
