[project]
name = "shinobi"
version = "0.1.0"
description = "Enhanced project initialization tool built on top of uv"
authors = []
dependencies = [
    "typer>=0.9.0",
    "rich>=13.7.0",
    "questionary>=2.0.1",
    "jinja2>=3.1.3",
]
requires-python = ">=3.8"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.3.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
shinobi = "shinobi.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shinobi"]

[tool.ruff]
line-length = 120
target-version = "py39"
select = ["E", "F", "B", "I"]
