[project]
name = "shinobi"
version = "0.1.3"
description = "Enhanced project initialization tool built on top of uv"
authors = [
  { name = "Ian Timmis" }
]
license = { text = "MIT" }
dependencies = [
    "typer>=0.9.0",
    "rich>=13.7.0",
    "questionary>=2.0.1",
]
requires-python = ">=3.11"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.3.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
shinobi = "shinobi.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shinobi"]

[tool.ruff]
line-length = 88
target-version = "py313"
fix = true

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = ["integration: end-to-end tests that invoke uv init (slower)"]
